--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
+.idea/
 /node_modules
 
 # testing
@@ -20,5 +21,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/.idea
+
 
